--- a/src/views/add-business.ejs
+++ b/src/views/add-business.ejs
@@ -43,7 +43,7 @@
     <div class="add-business-card">
       <div class="add-business-header">
         <h2 class="add-business-title">Add New Business</h2>
-        <p class="add-business-subtitle">Create a new business to manage your WhatsApp groups and orders.</p>
+        <p class="add-business-subtitle">Create a new business to manage your groups and orders.</p>
       </div>
       <div class="add-business-body">
         <% if (typeof error !== 'undefined') { %>
@@ -59,7 +59,7 @@
           <div class="add-business-nextsteps">
             <h5><i class="fas fa-info-circle"></i> Next Steps</h5>
             <ol>
-              <li>Add our bot to your new business's WhatsApp groups</li>
+              <li>Add Novi to your new business's groups</li>
               <li>Type the setup command in each group</li>
               <li>Start managing your deliveries!</li>
             </ol>
