--- a/src/views/inventory.ejs
+++ b/src/views/inventory.ejs
@@ -281,12 +281,11 @@
                 </div>
                 
                 <div class="form-group">
-                    <label for="itemImage">Image URL (Optional)</label>
-                    <input type="url" id="itemImage" name="image_url" placeholder="https://example.com/image.jpg">
+                    <label for="itemImage">Upload Image (Optional)</label>
+                    <input type="url" id="itemImage" name="image_url" placeholder="Coming Soon!">
                 </div>
                 
                 <div class="form-actions">
-                    <button type="button" class="btn btn-secondary" id="cancelBtn">Cancel</button>
                     <button type="submit" class="btn btn-primary">Save Item</button>
                 </div>
             </form>
@@ -355,8 +354,8 @@
                     </div>
                     
                     <div class="form-group">
-                        <label for="detailsItemImage">Image URL (Optional)</label>
-                        <input type="url" id="detailsItemImage" name="image_url" placeholder="https://example.com/image.jpg">
+                        <label for="detailsItemImage">Upload Image (Optional)</label>
+                        <input type="url" id="detailsItemImage" name="image_url" placeholder="Coming Soon!">
                     </div>
                     
                     <div class="form-actions">
@@ -364,7 +363,6 @@
                             <i class="fas fa-trash"></i> Delete Item
                         </button>
                         <div class="form-actions-right">
-                            <button type="button" class="btn btn-secondary" id="cancelDetailsBtn">Cancel</button>
                             <button type="submit" class="btn btn-primary">Save Changes</button>
                         </div>
                     </div>
